@startuml
'https://plantuml.com/class-diagram

class TodoManager {
    main()
    start()
}

class TodoController{
    model: TodoListModel
    'javafx event handlers
    saveListItems()
    loadListItems()
    clearItem()
    displayAll()
    displayCompleted()
    displayUncompleted()
    addItem()
    removeItem()
    editDescription()
    editDueDate()
    editDone()
    helpButton()
    initialize()
    getPeople()
}

class AlertManager {
    alertDueDate()
    alertDone()
    alertDescription()
    alertClear()
}

class ConditionsManager {
    isClear()
    validateDone()
    validateDueDate()
    validateDescription()
}

class DisplayManager {
    getAll()
    getCompleted()
    getUncompleted()
}



class FileManager {
    fileChooser()
    openFileLoadData()
    getDataFromFile()
    openFileSaveData()
    readFile()
    getDataFromTableView()
}

class Item {
    -completed
    -description
    -dueDate
}

org.javafx.Application <|- TodoManager
TodoManager o--> TodoController
TodoController <--o Item
TodoController <-- FileManager
TodoController <-- AlertManager
TodoController <-- ConditionsManager
TodoController <-- DisplayManager

Item o--> FileManager
Item o--> ConditionsManager
Item o--> DisplayManager


@enduml